--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
+     <!-- Pixel Glass -->
+<!-- <style>
+  HTML {
+    background-repeat: no-repeat;
+    background-position:  50% 0;
+    /* По умолчанию показывается мобильный макет */
+    background-image: url( "img/pixelperfect/Mobile.png" );
+  }
+  /* Планшет */
+  @media ( min-width: 760px ) {
+    HTML {
+      /* Планшетный макет */
+      background-image: url( "img/pixelperfect/Tablet.png" );
+    }
+  }
+  /* Десктоп */
+  @media ( min-width: 960px ) {
+    HTML {
+      /* Десктопный макет */
+      background-image: url( "img/pixelperfect/Desktop.png" );
+    }
+  }
+</style>
+<link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
+<script src="../node_modules/pixel-glass/script.js"></script> -->
+<!-- // Pixel Glass -->
   </head>
   <body class="page-body page-body--index">
     <header class="page-body__header">
@@ -130,7 +156,7 @@
     <main class="page-main">
       <div class="page-main__lead">
         <section class="lead">
-          <h1 class="lead__title">Функциональное<br />питание для котов</h1>
+          <h1 class="title lead__title">Функциональное<br />питание для котов</h1>
           <p class="lead__text">занялся собой? займись котом!</p>
           <picture>
             <source
@@ -202,7 +228,7 @@
       </div>
       <div class="page-main__instruction">
         <section class="instruction">
-          <h2 class="instruction__title">Как это работает</h2>
+          <h2 class="title instruction__title">Как это работает</h2>
           <ul class="instruction__list">
             <li class="instruction__item instruction__item--1">
               <img
@@ -273,20 +299,20 @@
               <ul class="example__list">
                 <li class="example__item example__item--weight">
                   <h3
-                    class="example__title example__title--table example__title--table-weight"
+                    class="example__item--header example__item--header--weight"
                   >
                     5 КГ
                   </h3>
                   <p
-                    class="example__item-text example__item-text--table-weight"
+                    class="example__item--text example__item-text--weight"
                   >
                     снижение веса
                   </p>
                 </li>
                 <li class="example__item example__item--days">
-                  <h3 class="example__title example__title--table">60 ДНЕЙ</h3>
+                  <h3 class="example__item--header">60 ДНЕЙ</h3>
                   <p
-                    class="example__item-text example__item-text--table example__item-text--table-days"
+                    class="example__item--text example__item-text--days"
                   >
                     затрачено времени
                   </p>
@@ -439,6 +465,7 @@
                   viewBox="3.007 11.628 30.004 15.761"
                   enable-background="new 3.007 11.628 30.004 15.761"
                   xml:space="preserve"
+                  fill="#666666"
                 >
                   <g>
                     <path
@@ -488,6 +515,7 @@
                   viewBox="-3 -3 23 23"
                   enable-background="new -3 -3 23 23"
                   xml:space="preserve"
+                  fill="#666666"
                 >
                   <path
                     d="M14.002-1.501c2.48,0,4.498,2.02,4.498,4.501v11c0,2.481-2.018,4.5-4.498,4.5H3.01
@@ -518,6 +546,7 @@
                   viewBox="34.789 -4.709 13.518 27.75"
                   enable-background="new 34.789 -4.709 13.518 27.75"
                   xml:space="preserve"
+                  fill="#666666"
                 >
                   <g>
                     <path
@@ -533,18 +562,17 @@
           </ul>
           <ul class="footer__copyright">
             <a class="footer__copyright--text">HTML Academy</a>
-            <a class="footer__copyright--icon">
-              <svg
+            <a class="footer__copyright--link">
+              <svg class="footer__copyright--icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="27"
                 height="34"
                 viewBox="0 0 27 34"
-                fill="none"
+                fill="#666666"
               >
                 <g clip-path="url(#clip0_95_230)">
                   <path
                     d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z"
-                    fill="#666666"
                   />
                 </g>
                 <defs>
