--- a/selectprogramm.html
+++ b/selectprogramm.html
@@ -150,59 +150,28 @@
       <div class="page-main__wrapper-selectprogramm">
         <div class="page-main__selection-programm">
           <div class="selection-programm__wrapper">
-            <form
-              class="selection-programm"
-              action="https://echo.htmlacademy.ru"
-            >
+            <form class="selection-programm" action="https://echo.htmlacademy.ru">
               <div class="selection-programm__change-programm">
                 <h1 class="page__title">Подбор программы</h1>
-                <legend class="cat-data__legend">
-                  заполните анкету, и мы подберем<br />
+                <h2 class="cat-data__legend">
+                  заполните анкету, и мы подберем<br/>
                   программу питания для вашего кота
-                </legend>
+                </h2>
                 <div class="change-programm__container-fieldset">
                   <section class="cat-data">
                     <fieldset class="cat-data__form-info">
                       <ul class="cat-data__list">
                         <li class="cat-data__item">
-                          <label class="cat-data__item-label" for="name"
-                            >имя:*</label
-                          >
-                          <input
-                            class="cat-data__item-input"
-                            type="text "
-                            name="name "
-                            id="name"
-                            placeholder="Барсик"
-                          />
+                          <label class="cat-data__item-label" for="name">имя:*</label>
+                          <input class="cat-data__item-input" type="text" name="name" id="name" placeholder="Барсик"/>
                         </li>
                         <li class="cat-data__item cat-data__item--weight">
-                          <label
-                            class="cat-data__item-label cat-data__item-label--weight"
-                            for="weight"
-                            >вес (кг):*</label
-                          >
-                          <input
-                            class="cat-data__item-input"
-                            type="text "
-                            name="weight"
-                            id="weight"
-                            placeholder="7"
-                          />
+                          <label class="cat-data__item-label cat-data__item-label--weight" for="weight">вес (кг):*</label>
+                          <input class="cat-data__item-input" type="text" name="weight" id="weight" placeholder="7"/>
                         </li>
                         <li class="cat-data__item cat-data__item--age">
-                          <label
-                            class="cat-data__item-label cat-data__item-label--age"
-                            for="age"
-                            >возраст (лет):</label
-                          >
-                          <input
-                            class="cat-data__item-input"
-                            type="text "
-                            name="age "
-                            id="age"
-                            placeholder="7"
-                          />
+                          <label class="cat-data__item-label cat-data__item-label--age" for="age" >возраст (лет):</label>
+                          <input class="cat-data__item-input" type="text" name="age " id="age" placeholder="7"/>
                         </li>
                       </ul>
                     </fieldset>
@@ -211,31 +180,15 @@
                     <fieldset class="target__form">
                       <ul class="target__list">
                         <li class="target__item">
-                          <input
-                            class="visually-hidden filter-input-radio"
-                            type="radio"
-                            name="targetname"
-                            id="slim"
-                            checked
-                          />
+                          <input class="visually-hidden filter-input-radio" type="radio" name="targetname" id="slim" checked/>
                           <label for="slim">похудение</label>
                         </li>
                         <li class="target__item">
-                          <input
-                            class="visually-hidden filter-input-radio"
-                            type="radio"
-                            name="targetname"
-                            id="set-weight"
-                          />
+                          <input class="visually-hidden filter-input-radio" type="radio" name="targetname" id="set-weight"/>
                           <label for="set-weight">набор массы</label>
                         </li>
                         <li class="target__item">
-                          <input
-                            class="visually-hidden filter-input-radio"
-                            type="radio"
-                            name="targetname"
-                            id="council"
-                          />
+                          <input class="visually-hidden filter-input-radio" type="radio" name="targetname" id="council"/>
                           <label for="council">не знаю (нужен ваш совет)</label>
                         </li>
                       </ul>
@@ -251,30 +204,12 @@
                   <fieldset class="contact__form">
                     <ul class="contact__list">
                       <li class="contact__item contact__item--mail">
-                        <label
-                          class="contact__item-label contact__item-label--email"
-                          for="email"
-                          >e-mail:*</label
-                        >
-                        <input
-                          class="contact__item-input"
-                          type="text "
-                          name="email"
-                          id="email"
-                          placeholder="KUKLACHEV@GMAIL.COM"
-                        />
+                        <label class="contact__item-label contact__item-label--email" for="email">e-mail:*</label>
+                        <input class="contact__item-input" type="text" name="email" id="email" placeholder="KUKLACHEV@GMAIL.COM"/>
                       </li>
                       <li class="contact__item contact__item--phone">
-                        <label class="contact__item-label" for="phone"
-                          >телефон:*</label
-                        >
-                        <input
-                          class="contact__item-input"
-                          type="text "
-                          name="phone"
-                          id="phone"
-                          placeholder="8 (960) 900-60-90"
-                        />
+                        <label class="contact__item-label" for="phone">телефон:*</label>
+                        <input class="contact__item-input" type="text" name="phone" id="phone" placeholder="8 (960) 900-60-90"/>
                       </li>
                     </ul>
                   </fieldset>
@@ -283,14 +218,7 @@
                   </h2>
                   <fieldset class="contact__comment contact__comment--textarea">
                     <label class="" for="comment"></label>
-                    <textarea
-                      class="comment-textarea"
-                      name="comment"
-                      id="comment"
-                      cols="10"
-                      rows="5"
-                      placeholder="Расскажите обо всех повадках кота"
-                    ></textarea>
+                    <textarea class="comment-textarea" name="comment" id="comment" cols="10" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
                   </fieldset>
                   <h2 class="contact__title contact__title--optionally">
                     Дополнительно
@@ -298,40 +226,19 @@
                   <fieldset class="optionally__form">
                     <ul class="optionally__list">
                       <li class="optionally__item">
-                        <input
-                          class="visually-hidden optionally__item--checkbox"
-                          name="sweetener-additional-item"
-                          id="sweetener"
-                          type="checkbox"
-                          checked
-                        />
+                        <input class="visually-hidden optionally__item--checkbox" name="sweetener-additional-item" id="sweetener" type="checkbox" checked/>
                         <label for="sweetener">сахарозаменитель</label>
                       </li>
                       <li class="optionally__item">
-                        <input
-                          class="visually-hidden optionally__item--checkbox"
-                          name="drinkwater-additional-item"
-                          id="drinkwater"
-                          type="checkbox"
-                        />
+                        <input class="visually-hidden optionally__item--checkbox" name="drinkwater-additional-item" id="drinkwater" type="checkbox"/>
                         <label for="drinkwater">питьевая вода</label>
                       </li>
                       <li class="optionally__item">
-                        <input
-                          class="visually-hidden optionally__item--checkbox"
-                          name="milk-additional-item"
-                          id="milk"
-                          type="checkbox"
-                        />
+                        <input class="visually-hidden optionally__item--checkbox" name="milk-additional-item" id="milk" type="checkbox"/>
                         <label for="milk">молоко</label>
                       </li>
                       <li class="optionally__item">
-                        <input
-                          class="visually-hidden optionally__item--checkbox"
-                          name="vitamins-additional-item"
-                          id="vitamins"
-                          type="checkbox"
-                        />
+                        <input class="visually-hidden optionally__item--checkbox" name="vitamins-additional-item" id="vitamins" type="checkbox"/>
                         <label for="vitamins">витамины</label>
                       </li>
                     </ul>
@@ -339,12 +246,8 @@
                 </section>
               </div>
               <div class="container-button-form">
-                <a class="selection-programm__form-button button"
-                  >отправить заявку</a
-                >
-                <p class="selection-programm__explanation">
-                  * &mdash; Обязательные поля
-                </p>
+                <a class="selection-programm__form-button button">отправить заявку</a>
+                <p class="selection-programm__explanation">* &mdash; Обязательные поля</p>
               </div>
             </form>
           </div>
@@ -537,7 +440,7 @@
               </a>
             </li>
           </ul>
-          <ul class="footer__copyright">
+          <span class="footer__copyright">
             <a class="footer__copyright--text" href="index.html">HTML Academy</a>
             <a class="footer__copyright--link" href="index.html">
               <svg class="footer__copyright--icon"
@@ -559,7 +462,7 @@
                 </defs>
               </svg>
             </a>
-          </ul>
+          </span>
         </div>
       </div>
     </footer>
