--- a/catalog.html
+++ b/catalog.html
@@ -2,19 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,user-scalable=0,initial-scale=1,maximum-scale=1,minimum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1,maximum-scale=1,minimum-scale=1" />
     <title>Интернет-магазин Кэт Энерджи</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Pixel Glass -->
     <!-- <style>
       HTML {
@@ -47,34 +41,13 @@
       <div class="header__wrapper">
         <div class="header">
           <div class="header__logo">
-            <a class="logo" >
+            <a class="logo">
               <picture>
-                <source
-                  media="(min-width: 1440px)"
-                  srcset="img/logo-desktop.svg"
-                  height="60"
-                  width="202"
-                />
-                <source
-                  media="(min-width: 768px)"
-                  srcset="img/logo-tablet.svg"
-                  height="52"
-                  width="174"
-                />
-                <img
-                  src="img/logo-mobile.svg"
-                  height="38"
-                  width="35"
-                  alt="иконка"
-                />
+                <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" height="60" width="202" />
+                <source media="(min-width: 768px)"  srcset="img/logo-tablet.svg" height="52" width="174" />
+                <img src="img/logo-mobile.svg" height="38" width="35" alt="иконка" />
               </picture>
-              <img
-                src="img/logo-text.svg"
-                class="logo__desc"
-                width="102"
-                height="19"
-                alt="Логотип-текст"
-              />
+              <img src="img/logo-text.svg" class="logo__desc" width="102" height="19" alt="Логотип-текст" />
             </a>
             <a class="toggle-button">
               <svg
@@ -83,24 +56,21 @@
                 width="20"
                 height="20"
                 viewBox="0 0 20 20"
-                fill="none"
-              >
+                fill="none">
                 <line
                   y1="-0.75"
                   x2="24.7577"
                   y2="-0.75"
                   transform="matrix(0.686589 -0.727046 0.686589 0.727046 2.00171 20)"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5"/>
                 <line
                   y1="-0.75"
                   x2="24.7577"
                   y2="-0.75"
                   transform="matrix(0.686589 0.727046 -0.686589 0.727046 1 2)"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5"/>
               </svg>
               <svg
                 class="toggle--inactive logo__burger"
@@ -108,29 +78,25 @@
                 width="24"
                 height="18"
                 viewBox="0 0 24 18"
-                fill="none"
-              >
+                fill="none">
                 <line
                   y1="1.25"
                   x2="24"
                   y2="1.25"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5"/>
                 <line
                   y1="9.25"
                   x2="24"
                   y2="9.25"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5"/>
                 <line
                   y1="17.25"
                   x2="24"
                   y2="17.25"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5"/>
               </svg>
             </a>
           </div>
@@ -160,22 +126,19 @@
             <ul class="catalog__list">
               <li class="catalog__item">
                 <picture class="catalog__picture">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_chiken_500g-tablet-desk.png,
                       img/catalog_chiken_500g-tablet-desk@2.png 2x
                     "
                     width="161"
-                    height="172"
-                  />
+                    height="172" />
                   <img class="picture--odd"
-                    src="img/catalog chiken 500g.png"
+                    src="img/catalog_chiken_500g.png"
                     srcset="img/catalog_chiken_500g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="68"
-                    height="86"
-                  />
+                    height="86" />
                 </picture>
                 <h3 class="catalog__title">Cat energy pro 500 г</h3>
                 <table class="catalog__table">
@@ -196,22 +159,19 @@
               </li>
               <li class="catalog__item">
                 <picture class="catalog__picture catalog__picture--even">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_chiken_1000g-tablet-desk.png,
                       img/catalog_chiken_1000g-tablet-desk@2.png 2x
                     "
                     width="168"
-                    height="206"
-                  />
+                    height="206" />
                   <img class="picture--even"
                     src="img/catalog_chiken_1000g.png"
                     srcset="img/catalog_chiken_1000g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="84"
-                    height="100.8"
-                  />
+                    height="101" />
                 </picture>
                 <h3 class="catalog__title">Cat energy pro 1000 г</h3>
                 <table class="catalog__table">
@@ -232,22 +192,19 @@
               </li>
               <li class="catalog__item">
                 <picture class="catalog__picture">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_fish_500g-tablet-desk.png,
                       img/catalog_fish_500g-tablet-desk@2.png 2x
                     "
                     width="163"
-                    height="174"
-                  />
+                    height="174" />
                   <img class="picture--odd"
                     src="img/catalog_fish_500g.webp"
                     srcset="img/catalog_fish_500g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="68"
-                    height="78"
-                  />
+                    height="78" />
                 </picture>
                 <h3 class="catalog__title">Cat energy pro 500 г</h3>
                 <table class="catalog__table">
@@ -268,22 +225,19 @@
               </li>
               <li class="catalog__item">
                 <picture class="catalog__picture catalog__picture--even">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_fish_1000g-tablet-desk.png,
                       img/catalog_fish_1000g-tablet-desk@2.png 2x
                     "
                     width="168"
-                    height="200"
-                  />
+                    height="200" />
                   <img
                     src="img/catalog_fish_1000g.webp"
                     srcset="img/catalog_fish_1000g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="84"
-                    height="100.8"
-                  />
+                    height="101" />
                 </picture>
                 <h3 class="catalog__title">Cat energy pro 1000 г</h3>
                 <table class="catalog__table">
@@ -304,22 +258,19 @@
               </li>
               <li class="catalog__item">
                 <picture class="catalog__picture">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_buckwheat_500g-tablet-desk.png,
                       img/catalog_buckwheat_500g-tablet-desk@2.png 2x
                     "
                     width="161"
-                    height="171"
-                  />
+                    height="171" />
                   <img class="picture--odd"
                     src="img/catalog_buckwheat_500g.webp"
                     srcset="img/catalog_buckwheat_500g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="68"
-                    height="78"
-                  />
+                    height="78" />
                 </picture>
                 <h3 class="catalog__title">Cat energy slim 500 г</h3>
                 <table class="catalog__table">
@@ -340,22 +291,19 @@
               </li>
               <li class="catalog__item">
                 <picture class="catalog__picture catalog__picture--even">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_buckwheat_1000g-tablet-desk.png,
                       img/catalog_buckwheat_1000g-tablet-desk@2.png 2x
                     "
                     width="168"
-                    height="200"
-                  />
+                    height="200" />
                   <img class="picture--even"
                     src="img/catalog_buckwheat_1000g.png"
                     srcset="img/catalog_buckwheat_1000g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="84"
-                    height="100"
-                  />
+                    height="100" />
                 </picture>
                 <h3 class="catalog__title">Cat energy slim 1000 г</h3>
                 <table class="catalog__table">
@@ -376,22 +324,19 @@
               </li>
               <li class="catalog__item">
                 <picture class="catalog__picture">
-                  <source
-                    media="(min-width: 768px)"
+                  <source media="(min-width: 768px)"
                     srcset="
                       img/catalog_rice_500g-tablet-desk.png,
                       img/catalog_rice_500g-tablet-desk.png 2x
                     "
                     width="163"
-                    height="174"
-                  />
+                    height="174" />
                   <img class="picture--odd"
                     src="img/catalog_rice_500g.webp"
                     srcset="img/catalog_rice_500g@2.png 2x"
-                    alt=""
+                    alt="фото товара"
                     width="72"
-                    height="84"
-                  />
+                    height="84" />
                 </picture>
                 <h3 class="catalog__title">Cat energy slim 500 г</h3>
                 <table class="catalog__table">
@@ -411,7 +356,7 @@
                 <a class="button button--catalog">Заказать</a>
               </li>
               <li class="catalog__item--show-else">
-                <img src="" alt="" />
+                <img />
                 <h4 class="catalog__title--show-else">
                   Показать еще 100500 товаров
                 </h4>
@@ -428,9 +373,7 @@
           <div class="page-main__additional-products">
             <section class="additional-products">
               <ul class="additional-products__list">
-                <li
-                  class="additional-products__item additional-products__item--first"
-                >
+                <li class="additional-products__item additional-products__item--first">
                   <h3 class="additional-products__title--item">
                     Сахарозаменитель
                   </h3>
@@ -452,55 +395,38 @@
                   </h3>
                   <table class="additional-products__table">
                     <tr class="additional-products__table-row">
-                      <td class="additional-products__table-first-column">
-                        5 литров
-                      </td>
+                      <td class="additional-products__table-first-column">5 литров</td>
                       <td class="catalog__table-second-column--add">50 р.</td>
                     </tr>
                   </table>
-                  <a class="button button--additional-products"
-                    >Заказать</a
-                  >
+                  <a class="button button--additional-products">Заказать</a>
                 </li>
                 <li class="additional-products__item">
                   <h3 class="additional-products__title--item">Молоко</h3>
                   <table class="additional-products__table">
                     <tr class="additional-products__table-row">
-                      <td class="additional-products__table-first-column">
-                        1 литр
-                      </td>
+                      <td class="additional-products__table-first-column">1 литр</td>
                       <td class="catalog__table-second-column--add">100 р.</td>
                     </tr>
                   </table>
-                  <a class="button button--additional-products"
-                    >Заказать</a
-                  >
+                  <a class="button button--additional-products">Заказать</a>
                 </li>
                 <li class="additional-products__item">
                   <h3 class="additional-products__title--item">Витамины</h3>
                   <table class="additional-products__table">
                     <tr class="additional-products__table-row">
-                      <td class="additional-products__table-first-column">
-                        1 упаковка (30 г)
-                      </td>
+                      <td class="additional-products__table-first-column">1 упаковка (30 г)</td>
                       <td class="catalog__table-second-column--add">300 р.</td>
                     </tr>
                   </table>
-                  <a class="button button--additional-products"
-                    >Заказать</a
-                  >
+                  <a class="button button--additional-products">Заказать</a>
                 </li>
               </ul>
             </section>
           </div>
           <div class="page-main__gift">
             <aside class="gift">
-              <img
-                src="img/icon_gift.svg"
-                class="gift__icon"
-                width="78"
-                height="80"
-              />
+              <img src="img/icon_gift.svg" alt="иконка раздела подарок" class="gift__icon" width="78" height="80"/>
               <p class="gift__text">
                 Закажите все<br />
                 и получите чехол для<br />
@@ -699,7 +625,7 @@
               </a>
             </li>
           </ul>
-          <ul class="footer__copyright">
+          <span class="footer__copyright">
             <a class="footer__copyright--text" href="index.html">HTML Academy</a>
             <a class="footer__copyright--link" href="index.html">
               <svg class="footer__copyright--icon"
@@ -707,8 +633,7 @@
                 width="27"
                 height="34"
                 viewBox="0 0 27 34"
-                fill="#666666"
-              >
+                fill="#666666">
                 <g clip-path="url(#clip0_95_230)">
                   <path
                     d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z"
@@ -716,12 +641,12 @@
                 </g>
                 <defs>
                   <clipPath id="clip0_95_230">
-                    <rect width="27" height="34" fill="white" />
+                    <rect width="27" height="34" fill="white"/>
                   </clipPath>
                 </defs>
               </svg>
             </a>
-          </ul>
+          </span>
         </div>
       </div>
     </footer>
