--- a/catalog.html
+++ b/catalog.html
@@ -128,14 +128,14 @@
                 <picture class="catalog__picture">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_chiken_500g-tablet-desk.png,
-                      img/catalog_chiken_500g-tablet-desk@2.png 2x
+                      img/catalog_chiken_500g-tablet-desk.webp,
+                      img/catalog_chiken_500g-tablet-desk@2.webp 2x
                     "
                     width="161"
                     height="172" />
                   <img class="picture--odd"
-                    src="img/catalog_chiken_500g.png"
-                    srcset="img/catalog_chiken_500g@2.png 2x"
+                    src="img/catalog_chiken_500g.webp"
+                    srcset="img/catalog_chiken_500g@2.webp 2x"
                     alt="фото товара"
                     width="68"
                     height="86" />
@@ -161,14 +161,14 @@
                 <picture class="catalog__picture catalog__picture--even">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_chiken_1000g-tablet-desk.png,
-                      img/catalog_chiken_1000g-tablet-desk@2.png 2x
+                      img/catalog_chiken_1000g-tablet-desk.webp,
+                      img/catalog_chiken_1000g-tablet-desk@2.webp 2x
                     "
                     width="168"
                     height="206" />
                   <img class="picture--even"
-                    src="img/catalog_chiken_1000g.png"
-                    srcset="img/catalog_chiken_1000g@2.png 2x"
+                    src="img/catalog_chiken_1000g.webp"
+                    srcset="img/catalog_chiken_1000g@2.webp 2x"
                     alt="фото товара"
                     width="84"
                     height="101" />
@@ -194,14 +194,14 @@
                 <picture class="catalog__picture">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_fish_500g-tablet-desk.png,
-                      img/catalog_fish_500g-tablet-desk@2.png 2x
+                      img/catalog_fish_500g-tablet-desk.webp,
+                      img/catalog_fish_500g-tablet-desk@2.webp 2x
                     "
                     width="163"
                     height="174" />
                   <img class="picture--odd"
                     src="img/catalog_fish_500g.webp"
-                    srcset="img/catalog_fish_500g@2.png 2x"
+                    srcset="img/catalog_fish_500g@2.webp 2x"
                     alt="фото товара"
                     width="68"
                     height="78" />
@@ -227,14 +227,14 @@
                 <picture class="catalog__picture catalog__picture--even">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_fish_1000g-tablet-desk.png,
-                      img/catalog_fish_1000g-tablet-desk@2.png 2x
+                      img/catalog_fish_1000g-tablet-desk.webp,
+                      img/catalog_fish_1000g-tablet-desk@2.webp 2x
                     "
                     width="168"
                     height="200" />
                   <img
                     src="img/catalog_fish_1000g.webp"
-                    srcset="img/catalog_fish_1000g@2.png 2x"
+                    srcset="img/catalog_fish_1000g@2.webp 2x"
                     alt="фото товара"
                     width="84"
                     height="101" />
@@ -260,14 +260,14 @@
                 <picture class="catalog__picture">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_buckwheat_500g-tablet-desk.png,
-                      img/catalog_buckwheat_500g-tablet-desk@2.png 2x
+                      img/catalog_buckwheat_500g-tablet-desk.webp,
+                      img/catalog_buckwheat_500g-tablet-desk@2.webp 2x
                     "
                     width="161"
                     height="171" />
                   <img class="picture--odd"
                     src="img/catalog_buckwheat_500g.webp"
-                    srcset="img/catalog_buckwheat_500g@2.png 2x"
+                    srcset="img/catalog_buckwheat_500g@2.webp 2x"
                     alt="фото товара"
                     width="68"
                     height="78" />
@@ -293,14 +293,14 @@
                 <picture class="catalog__picture catalog__picture--even">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_buckwheat_1000g-tablet-desk.png,
-                      img/catalog_buckwheat_1000g-tablet-desk@2.png 2x
+                      img/catalog_buckwheat_1000g-tablet-desk.webp,
+                      img/catalog_buckwheat_1000g-tablet-desk@2.webp 2x
                     "
                     width="168"
                     height="200" />
                   <img class="picture--even"
-                    src="img/catalog_buckwheat_1000g.png"
-                    srcset="img/catalog_buckwheat_1000g@2.png 2x"
+                    src="img/catalog_buckwheat_1000g.webp"
+                    srcset="img/catalog_buckwheat_1000g@2.webp 2x"
                     alt="фото товара"
                     width="84"
                     height="100" />
@@ -326,14 +326,14 @@
                 <picture class="catalog__picture">
                   <source media="(min-width: 768px)"
                     srcset="
-                      img/catalog_rice_500g-tablet-desk.png,
-                      img/catalog_rice_500g-tablet-desk.png 2x
+                      img/catalog_rice_500g-tablet-desk.webp,
+                      img/catalog_rice_500g-tablet-desk.webp 2x
                     "
                     width="163"
                     height="174" />
                   <img class="picture--odd"
                     src="img/catalog_rice_500g.webp"
-                    srcset="img/catalog_rice_500g@2.png 2x"
+                    srcset="img/catalog_rice_500g@2.webp 2x"
                     alt="фото товара"
                     width="72"
                     height="84" />
