--- a/selectprogramm.html
+++ b/selectprogramm.html
@@ -17,7 +17,7 @@
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
          <!-- Pixel Glass -->
-<!-- <style>
+<style>
   HTML {
     background-repeat: no-repeat;
     background-position:  50% 0;
@@ -40,7 +40,7 @@
   }
 </style>
 <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
-<script src="../node_modules/pixel-glass/script.js"></script> -->
+<script src="../node_modules/pixel-glass/script.js"></script>
 <!-- // Pixel Glass -->
   </head>
   <body class="page-body">
