validation, fix error, adaptive

--- a/catalog.html
+++ b/catalog.html
@@ -119,7 +119,6 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="page-main__wrapper">
         <div class="page-main__catalog">
           <section class="catalog">
             <h2 class="page__title page__title--catalog">Каталог продукции</h2>
@@ -357,13 +356,11 @@
               </li>
               <li class="catalog__item--show-else">
                 <img />
-                <h4 class="catalog__title--show-else">
-                  Показать еще 100500 товаров
-                </h4>
+                <h4 class="catalog__title--show-else">Показать еще 100500 товаров</h4>
                 <p class="catalog__text--show-else">
                   На самом деле вкусов гораздо больше!
                 </p>
-                <a class="button button--show-else">Показать все</a>
+                <a class="button button--catalog button--show-else">Показать все</a>
               </li>
             </ul>
           </section>
@@ -374,25 +371,17 @@
             <section class="additional-products">
               <ul class="additional-products__list">
                 <li class="additional-products__item additional-products__item--first">
-                  <h3 class="additional-products__title--item">
-                    Сахарозаменитель
-                  </h3>
+                  <h3 class="additional-products__title--item">Сахарозаменитель</h3>
                   <table class="additional-products__table">
                     <tr class="additional-products__table-row">
-                      <td class="additional-products__table-first-column">
-                        1 упаковка (100 г)
-                      </td>
+                      <td class="additional-products__table-first-column">1 упаковка (100 г)</td>
                       <td class="catalog__table-second-column--add">200 р.</td>
                     </tr>
                   </table>
-                  <a class="button button--additional-products"
-                    >Заказать</a
-                  >
+                  <a class="button button--additional-products">Заказать</a>
                 </li>
                 <li class="additional-products__item">
-                  <h3 class="additional-products__title--item">
-                    Питевая вода
-                  </h3>
+                  <h3 class="additional-products__title--item">Питевая вода</h3>
                   <table class="additional-products__table">
                     <tr class="additional-products__table-row">
                       <td class="additional-products__table-first-column">5 литров</td>
@@ -455,7 +444,6 @@
         <section>
           <div id="map" class="map"></div>
         </section>
-      </div>
     </main>
     <footer class="page-footer__footer">
       <div class="footer-wrapper">
@@ -520,7 +508,6 @@
                 <svg
                   class="footer__social-icon footer__social-icon--vk"
                   version="1.1"
-                  id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
@@ -530,8 +517,7 @@
                   viewBox="3.007 11.628 30.004 15.761"
                   enable-background="new 3.007 11.628 30.004 15.761"
                   xml:space="preserve"
-                  fill="#666666"
-                >
+                  fill="#666666">
                   <g>
                     <path
                       d="M26.945,27.388c-0.386,0-1.17-0.082-2.075-0.632c-0.642-0.385-1.223-0.968-1.784-1.532
@@ -570,7 +556,6 @@
                 <svg
                   class="footer__social-icon footer__social-icon--inst"
                   version="1.1"
-                  id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
@@ -580,8 +565,7 @@
                   viewBox="-3 -3 23 23"
                   enable-background="new -3 -3 23 23"
                   xml:space="preserve"
-                  fill="#666666"
-                >
+                  fill="#666666">
                   <path
                     d="M14.002-1.501c2.48,0,4.498,2.02,4.498,4.501v11c0,2.481-2.018,4.5-4.498,4.5H3.01
                   c-2.48,0-4.498-2.019-4.498-4.5V3c0-2.481,2.018-4.5,4.498-4.5h10.992 M14.002-3H3.01C-0.29-3-2.987-0.301-2.987,3v11.001
@@ -601,7 +585,6 @@
                 <svg
                   class="footer__social-icon footer__social-icon--fb"
                   version="1.1"
-                  id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
@@ -611,8 +594,7 @@
                   viewBox="34.789 -4.709 13.518 27.75"
                   enable-background="new 34.789 -4.709 13.518 27.75"
                   xml:space="preserve"
-                  fill="#666666"
-                >
+                  fill="#666666">
                   <g>
                     <path
                       d="M44.32,23.041h-6.816V10.137h-2.715V3.763h2.629c-0.202-2.887,0.298-5,1.519-6.444c1.039-1.229,2.583-1.911,4.588-2.026
