--- a/selectprogramm.html
+++ b/selectprogramm.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=0, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Интернет-магазин Кэт Энерджи</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
          <!-- Pixel Glass -->
-<style>
+<!-- <style>
   HTML {
     background-repeat: no-repeat;
     background-position:  50% 0;
@@ -40,7 +34,7 @@
   }
 </style>
 <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
-<script src="../node_modules/pixel-glass/script.js"></script>
+<script src="../node_modules/pixel-glass/script.js"></script> -->
 <!-- // Pixel Glass -->
   </head>
   <body class="page-body">
@@ -67,8 +61,7 @@
                 class="logo__desc"
                 width="102"
                 height="19"
-                alt="Логотип-текст"
-              />
+                alt="Логотип-текст" />
             </a>
             <a class="toggle-button">
               <svg
@@ -77,24 +70,21 @@
                 width="20"
                 height="20"
                 viewBox="0 0 20 20"
-                fill="none"
-              >
+                fill="none">
                 <line
                   y1="-0.75"
                   x2="24.7577"
                   y2="-0.75"
                   transform="matrix(0.686589 -0.727046 0.686589 0.727046 2.00171 20)"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5" />
                 <line
                   y1="-0.75"
                   x2="24.7577"
                   y2="-0.75"
                   transform="matrix(0.686589 0.727046 -0.686589 0.727046 1 2)"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5" />
               </svg>
               <svg
                 class="logo__burger"
@@ -102,29 +92,25 @@
                 width="24"
                 height="18"
                 viewBox="0 0 24 18"
-                fill="none"
-              >
+                fill="none">
                 <line
                   y1="1.25"
                   x2="24"
                   y2="1.25"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5" />
                 <line
                   y1="9.25"
                   x2="24"
                   y2="9.25"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5" />
                 <line
                   y1="17.25"
                   x2="24"
                   y2="17.25"
                   stroke="black"
-                  stroke-width="1.5"
-                />
+                  stroke-width="1.5" />
               </svg>
             </a>
           </div>
@@ -153,10 +139,7 @@
             <form class="selection-programm" action="https://echo.htmlacademy.ru">
               <div class="selection-programm__change-programm">
                 <h1 class="page__title">Подбор программы</h1>
-                <h2 class="cat-data__legend">
-                  заполните анкету, и мы подберем<br/>
-                  программу питания для вашего кота
-                </h2>
+                <h2 class="cat-data__legend">заполните анкету, и мы подберем<br/>программу питания для вашего кота</h2>
                 <div class="change-programm__container-fieldset">
                   <section class="cat-data">
                     <fieldset class="cat-data__form-info">
@@ -198,9 +181,7 @@
               </div>
               <div class="selection-programm__contact">
                 <section class="contact">
-                  <h2 class="contact__title contact__title--mail-phone">
-                    Контактные данные (владельца кота)
-                  </h2>
+                  <h2 class="contact__title contact__title--mail-phone">Контактные данные (владельца кота)</h2>
                   <fieldset class="contact__form">
                     <ul class="contact__list">
                       <li class="contact__item contact__item--mail">
@@ -213,16 +194,12 @@
                       </li>
                     </ul>
                   </fieldset>
-                  <h2 class="contact__title contact__title--comment">
-                    Комментарий
-                  </h2>
+                  <h2 class="contact__title contact__title--comment">Комментарий</h2>
                   <fieldset class="contact__comment contact__comment--textarea">
                     <label class="" for="comment"></label>
                     <textarea class="comment-textarea" name="comment" id="comment" cols="10" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
                   </fieldset>
-                  <h2 class="contact__title contact__title--optionally">
-                    Дополнительно
-                  </h2>
+                  <h2 class="contact__title contact__title--optionally">Дополнительно</h2>
                   <fieldset class="optionally__form">
                     <ul class="optionally__list">
                       <li class="optionally__item">
@@ -256,9 +233,7 @@
       <div class="page-main__partnership partnership--catalog-select">
         <div class="partnership__wrapper">
           <section class="partnership partnership--select">
-            <h3 class="partnership__title">
-              приглашаем <br />к сотрудничеству <br />дилеров!
-            </h3>
+            <h3 class="partnership__title">приглашаем <br />к сотрудничеству <br />дилеров!</h3>
             <address class="partnership__text">
               ул. Большая Конюшенная, д. 19/8
               <p class="partnership__text-street">Санкт-Петербург</p>
@@ -282,45 +257,35 @@
               width="128"
               height="24"
               viewBox="0 0 128 24"
-              fill="none"
-            >
+              fill="none">
               <g clip-path="url(#clip0_135_3260)">
                 <path
                   d="M1.60253 22.0513C0.468358 20.3682 -0.0946573 18.3503 3.016e-05 16.3077V7.79487C-0.137317 5.73031 0.390444 3.67661 1.50238 1.94872C2.6041 0.615385 4.30676 0 6.81067 0C9.31458 0 10.9171 0.615385 11.9187 1.74359C13.006 3.17255 13.5409 4.96181 13.421 6.76923V8.82051H8.51333V6.46154C8.55297 5.76385 8.45065 5.06533 8.21286 4.41026C8.08576 4.14583 7.88431 3.9264 7.63443 3.78018C7.38455 3.63395 7.09766 3.56763 6.81067 3.58974C6.10958 3.58974 5.60879 3.79487 5.40848 4.30769C5.18191 5.03643 5.08025 5.79984 5.10801 6.5641V17.5385C5.05512 18.2799 5.19327 19.0227 5.50864 19.6923C5.70895 20.2051 6.20973 20.4103 6.91083 20.4103C7.61192 20.4103 8.01255 20.2051 8.21286 19.6923C8.44058 18.9992 8.54242 18.2692 8.51333 17.5385V15.0769H13.421V17.1282C13.5229 18.9651 12.9911 20.7803 11.9187 22.2564C10.9171 23.4872 9.21443 24.1026 6.81067 24.1026C4.40692 24 2.6041 23.3846 1.60253 22.0513Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M19.3302 0.307617H25.0391L29.2457 23.6922H24.6385L23.8372 18.7692H20.5321L19.7308 23.6922H15.0235L19.3302 0.307617ZM23.4366 15.6922L22.2347 6.56403L21.0329 15.6922H23.4366Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M32.7512 4.20505H29.3459V0.307617H41.2645V4.10249H37.8592V23.6922H32.7512V4.20505Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M50.3787 0.307617H59.1925V2.76916H53.4836V10.4615H58.0908V12.8204H53.4836V21.4358H59.1925V23.7948H50.2786V0.307617H50.3787Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M61.7966 0.307617H64L70.5102 15.7948V0.307617H73.1142V23.6922H71.1111L64.5008 7.69223V23.6922H61.7966V0.307617Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M76.1189 0.307617H84.9327V2.76916H79.2238V10.4615H83.831V12.8204H79.2238V21.4358H84.9327V23.7948H76.1189V0.307617Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M87.5368 0.3076H92.144C93.9564 0.179397 95.7575 0.685711 97.2519 1.7435C98.3537 2.66657 98.8544 4.3076 98.8544 6.46145C98.8544 9.4358 97.953 11.282 96.0501 11.8973L99.2551 23.5897H96.1502L93.1455 12.6153H90.6416V23.5897H87.4366V0.3076H87.5368ZM91.9437 10.3589C92.9762 10.446 94.0053 10.1553 94.8482 9.53837C95.4491 9.02555 95.7496 7.99991 95.7496 6.46145C95.7774 5.69719 95.6757 4.93378 95.4491 4.20504C95.2237 3.68211 94.8366 3.24964 94.3474 2.97427C93.6576 2.65236 92.9003 2.51137 92.144 2.56401H90.7418V10.2563H91.9437V10.3589Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M102.861 21.9487C101.82 20.1554 101.331 18.0821 101.459 15.9999V8.20507C101.434 6.71875 101.602 5.23567 101.959 3.79481C102.294 2.71811 102.962 1.78218 103.862 1.12815C104.981 0.450275 106.271 0.128917 107.568 0.20507C109.671 0.20507 111.174 0.71789 112.075 1.8461C113.112 3.33582 113.608 5.14977 113.477 6.9743V7.79481H110.473V7.07687C110.477 6.21789 110.41 5.36008 110.272 4.51276C110.188 3.97732 109.9 3.49792 109.471 3.17943C108.908 2.80104 108.24 2.62099 107.568 2.66661C106.85 2.61949 106.139 2.83785 105.565 3.28199C105.329 3.48529 105.137 3.73569 104.999 4.01787C104.861 4.30004 104.781 4.60805 104.764 4.92302C104.632 5.83993 104.565 6.76543 104.563 7.69225V16.4102C104.49 17.7384 104.694 19.0674 105.164 20.3076C105.565 21.1281 106.366 21.4358 107.568 21.4358C108.043 21.4964 108.524 21.4119 108.952 21.1929C109.38 20.9739 109.734 20.6302 109.972 20.2051C110.501 18.9081 110.741 17.5064 110.673 16.1025V14.4615H107.768V12.1025H113.577V23.6923H111.574L111.274 21.0256C111.011 21.9193 110.465 22.6975 109.72 23.2364C108.976 23.7753 108.078 24.0441 107.167 23.9999C106.34 24.0498 105.513 23.8885 104.761 23.5304C104.01 23.1724 103.357 22.6289 102.861 21.9487Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
                 <path
                   d="M119.987 15.4871L115.08 0.410156H118.084L121.59 11.6922L124.995 0.410156H128L123.092 15.4871V23.6922H120.088V15.4871H119.987Z"
-                  fill="#111111"
-                />
+                  fill="#111111" />
               </g>
               <defs>
                 <clipPath id="clip0_135_3260">
@@ -335,7 +300,6 @@
                 <svg
                   class="footer__social-icon footer__social-icon--vk"
                   version="1.1"
-                  id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
@@ -345,8 +309,7 @@
                   viewBox="3.007 11.628 30.004 15.761"
                   enable-background="new 3.007 11.628 30.004 15.761"
                   xml:space="preserve"
-                  fill="#666666"
-                >
+                  fill="#666666">
                   <g>
                     <path
                       d="M26.945,27.388c-0.386,0-1.17-0.082-2.075-0.632c-0.642-0.385-1.223-0.968-1.784-1.532
@@ -374,8 +337,7 @@
                     c-0.926,0-1.854-0.885-3.425-3.267c-0.895-1.354-1.56-2.824-1.587-2.887c-0.011-0.021-0.054-0.077-0.075-0.094
                     c-0.083-0.054-0.233-0.097-0.32-0.116l-4.001,0.024c-0.021,0.001-0.045,0.002-0.07,0.005c0.591,1.189,3.426,6.592,6.519,9.419
                     c2.74,2.502,5.826,2.629,6.417,2.629l1.851-0.003c0.046-0.01,0.218-0.062,0.269-0.1c-0.019,0.018-0.01-0.053-0.01-0.097
-                    c-0.003-0.265,0.012-2.595,1.578-3.034C21.369,22.566,21.502,22.548,21.638,22.548z"
-                    />
+                    c-0.003-0.265,0.012-2.595,1.578-3.034C21.369,22.566,21.502,22.548,21.638,22.548z" />
                   </g>
                 </svg>
               </a>
@@ -385,7 +347,6 @@
                 <svg
                   class="footer__social-icon footer__social-icon--inst"
                   version="1.1"
-                  id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
@@ -395,8 +356,7 @@
                   viewBox="-3 -3 23 23"
                   enable-background="new -3 -3 23 23"
                   xml:space="preserve"
-                  fill="#666666"
-                >
+                  fill="#666666">
                   <path
                     d="M14.002-1.501c2.48,0,4.498,2.02,4.498,4.501v11c0,2.481-2.018,4.5-4.498,4.5H3.01
                   c-2.48,0-4.498-2.019-4.498-4.5V3c0-2.481,2.018-4.5,4.498-4.5h10.992 M14.002-3H3.01C-0.29-3-2.987-0.301-2.987,3v11.001
@@ -416,7 +376,6 @@
                 <svg
                   class="footer__social-icon footer__social-icon--fb"
                   version="1.1"
-                  id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink"
                   x="0px"
@@ -426,15 +385,13 @@
                   viewBox="34.789 -4.709 13.518 27.75"
                   enable-background="new 34.789 -4.709 13.518 27.75"
                   xml:space="preserve"
-                  fill="#666666"
-                >
+                  fill="#666666">
                   <g>
                     <path
                       d="M44.32,23.041h-6.816V10.137h-2.715V3.763h2.629c-0.202-2.887,0.298-5,1.519-6.444c1.039-1.229,2.583-1.911,4.588-2.026
                     l4.782-0.001v6.15h-3.755c-0.166,0.315-0.251,1.093-0.252,2.321h3.978v6.375H44.32V23.041z M39.004,21.541h3.816V8.637h3.957V5.263
                     h-3.953l-0.016-0.734c-0.044-2.04,0.002-3.784,1.007-4.46l0.19-0.127h2.801v-3.15h-3.239c-1.557,0.091-2.711,0.581-3.485,1.496
-                    c-1.041,1.231-1.41,3.298-1.099,6.144l0.092,0.832h-2.786v3.375h2.715V21.541z"
-                    />
+                    c-1.041,1.231-1.41,3.298-1.099,6.144l0.092,0.832h-2.786v3.375h2.715V21.541z" />
                   </g>
                 </svg>
               </a>
