--- a/index.html
+++ b/index.html
@@ -261,11 +261,7 @@
               </p>
               <ul class="example__list">
                 <li class="example__item example__item--weight">
-                  <h3
-                    class="example__item--header example__item--header--weight"
-                  >
-                    5 КГ
-                  </h3>
+                  <h3 class="example__item--header example__item--header--weight">5 КГ</h3>
                   <p class="example__item--text example__item-text--weight">
                     снижение веса
                   </p>
