clean code, fix bag, change description

--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@
           <a class="button lead__button" href="selectprogramm.html">подобрать программу</a>
         </section>
       </div>
-      <div class="page-main__direction-programm">
-        <div class="direction-programm__wrapper">
-          <section class="direction-programm">
+      <div class="direction-programm__wrapper">
+        <section class="direction-programm">
             <ul class="direction-programm__list">
               <li class="direction-programm__item">
                 <h2 class="direction-programm__title direction-programm__title--slim">похудение</h2>
@@ -189,8 +188,7 @@
                 <a class="direction-programm__link">каталог pro</a>
               </li>
             </ul>
-          </section>
-        </div>
+        </section>
       </div>
       <div class="page-main__instruction">
         <section class="instruction">
@@ -313,9 +311,7 @@
                   height="240" />
               </picture>
               <span class="example__slider">
-                <p class="example__silder-text example__silder-before example__slider-text--current">
-                  было
-                </p>
+                <p class="example__silder-text example__silder-before example__slider-text--current">было</p>
                 <p class="example__slider-text example__silder-after">стало</p>
               </span>
             </div>
@@ -323,15 +319,13 @@
         </div>
       </div>
       <div class="page-main__partnership">
-        <div class="partnership__wrapper">
-          <section class="partnership">
+        <section class="partnership">
             <h3 class="partnership__title">приглашаем <br />к сотрудничеству <br />дилеров!</h3>
             <address class="partnership__text">
               ул. Большая Конюшенная, д. 19/8
               <p class="partnership__text-street">Санкт-Петербург</p>
             </address>
-          </section>
-        </div>
+        </section>
       </div>
       <div class="page-main__map">
         <section>
