change flexbox type

--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
     <header class="page-body__header">
       <div class="header">
           <div class="header__logo">
-            <a class="logo">
+            <a class="logo" href="index.html">
               <picture>
                 <source
                   media="(min-width: 1440px)"
