--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <footer class="page-footer__footer">
       <div class="footer-wrapper">
         <div class="footer">
-          <a class="footer__text-logo">
+          <a class="footer__text-logo" href="index.html">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="footer__text-logo--icon"
